Initial Ionic Vue App Commit

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,5 @@
 {
   "name": "ionicSDK",
-  "integrations": {
-    "capacitor": {}
-  },
-  "type": "angular"
+  "integrations": {},
+  "type": "vue"
 }
