--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VUE_APP_I18N_FALLBACK_LOCALE=en
 VUE_APP_CACHE_MAX_AGE=3600
 VUE_APP_BASE_URL=https://dev-hc.hotwax.io/api/
 VUE_APP_VIEW_SIZE=10
+VUE_APP_ORDER_FILTERS=["orderTypeId: SALES_ORDER", "orderStatusId: ORDER_APPROVED", "!orderItemStatusId: ITEM_CANCELLED"]
