--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
     "default": "hotwax-digital-commerce"
+  },
+  "targets": {
+    "hotwax-digital-commerce": {
+      "hosting": {
+        "commerce-hub-dev": [
+          "dev-commerce-hub"
+        ]
+      }
+    }
   }
 }
