--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-eslint": "v5.0.0-alpha.7",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
@@ -48,8 +48,8 @@
     "cypress": "^8.3.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "jest": "^27.1.0",
-    "ts-jest": "^27.0.4",
+    "jest": "^26.1.0",
+    "ts-jest": "^26.0.4",
     "typescript": "~4.1.5",
     "vue-cli-plugin-i18n": "^1.0.1",
     "vue-jest": "^5.0.0-0"
