Updated: example values structure in env.example file(#1x634dq)

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
 VUE_APP_CACHE_MAX_AGE=3600
 VUE_APP_VIEW_SIZE=10
-VUE_APP_ORDER_STATUS=[{"id": "ORDER_CANCELLED", "value": "Cancelled"}]
-VUE_APP_ITEM_STATUS=[{"id": "ITEM_CANCELLED", "value": "Cancelled"}]
+VUE_APP_ORDER_STATUS={"": {"label": "", "color": ""}}
+VUE_APP_ITEM_STATUS={"": {"label": "", "color": ""}}
