Added: preorder/backorder id values in the env file and destructured the order object to directly get the values in template section(#1x634dq)

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ VUE_APP_CACHE_MAX_AGE=3600
 VUE_APP_VIEW_SIZE=10
 VUE_APP_ORDER_STATUS={"": {"label": "", "color": ""}}
 VUE_APP_ITEM_STATUS={"": {"label": "", "color": ""}}
+VUE_APP_PRE_ORDER_IDNT_ID=VUE_APP_PRE_ORDER_IDNT_ID
+VUE_APP_BACKORDER_IDNT_ID=VUE_APP_BACKORDER_IDNT_ID
