Added: item status and order status values in env file

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
 VUE_APP_CACHE_MAX_AGE=3600
 VUE_APP_VIEW_SIZE=10
-VUE_APP_ORDER_STATUS={"": {"label": "", "color": ""}}
-VUE_APP_ITEM_STATUS={"": {"label": "", "color": ""}}
+VUE_APP_ORDER_STATUS={"ORDER_APPROVED": {"label": "Approved", "color": "primary"}, "ORDER_AUTHORIZED": {"label": "Authorized", "color": "primary"}, "ORDER_CANCELLED": {"label": "Cancelled", "color": "danger"}, "ORDER_COMPLETED": {"label": "Completed", "color": "success"}, "ORDER_CREATED": {"label": "Created", "color": "medium"}, "ORDER_EXPIRED": {"label": "Expired", "color": "warning"}, "ORDER_HOLD": {"label": "Held", "color": "warning"}, "ORDER_PROCESSING": {"label": "Processing", "color": "secondary"}, "ORDER_REJECTED": {"label": "Rejected", "color": "danger"}, "ORDER_SENT": {"label": "Sent", "color": "success"}}
+VUE_APP_ITEM_STATUS={"ITEM_CREATED": {"label": "Created", "color": "medium"}, "ITEM_CANCELLED": {"label": "Cancelled", "color": "danger"}, "ITEM_APPROVED": {"label": "Approved", "color": "primary"}, "ITEM_COMPLETED": {"label": "Completed", "color": "success"}, "ITEM_EXPIRED": {"label": "Expired", "color": "danger"}, "ITEM_REJECTED": {"label": "Rejected", "color": "warning"}}
 VUE_APP_PRE_ORDER_IDNT_ID=VUE_APP_PRE_ORDER_IDNT_ID
 VUE_APP_BACKORDER_IDNT_ID=VUE_APP_BACKORDER_IDNT_ID
