Updated: some values for properties on UI and commented code to hide some of the actions(#1x634cr)

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ VUE_APP_ORDER_STATUS={"ORDER_APPROVED": {"label": "Approved", "color": "primary"
 VUE_APP_ITEM_STATUS={"ITEM_CREATED": {"label": "Created", "color": "medium"}, "ITEM_CANCELLED": {"label": "Cancelled", "color": "danger"}, "ITEM_APPROVED": {"label": "Approved", "color": "primary"}, "ITEM_COMPLETED": {"label": "Completed", "color": "success"}, "ITEM_EXPIRED": {"label": "Expired", "color": "danger"}, "ITEM_REJECTED": {"label": "Rejected", "color": "warning"}}
 VUE_APP_PRE_ORDER_IDNT_ID=VUE_APP_PRE_ORDER_IDNT_ID
 VUE_APP_BACKORDER_IDNT_ID=VUE_APP_BACKORDER_IDNT_ID
+VUE_APP_ORD_IDENT_TYPE_NAME=SHOPIFY_PROD_NAME
+VUE_APP_ORD_IDENT_TYPE_ID=SHOPIFY_ORD_ID
+VUE_APP_ORD_IDENT_TYPE_NO=SHOPIFY_ORD_NO
