--- a/changelogs/unreleased/-232yz5h.yml
+++ b/changelogs/unreleased/-232yz5h.yml
@@ -1,5 +1,5 @@
 ---
-title: 'Removed: Typescript related error from code.'
+title: 'Implemented: Functionality to fetch and populate product list on find product inventory page.'
 ticket_id: "#232yz5h"
 merge_request: 72
 author: Aniket Kumar Pandey
