Improved: code to rename orderDetails to order, and handled the loyalty options to use the filter(#1x634cr)

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ VUE_APP_BACKORDER_IDNT_ID=VUE_APP_BACKORDER_IDNT_ID
 VUE_APP_ORD_IDENT_TYPE_NAME=SHOPIFY_PROD_NAME
 VUE_APP_ORD_IDENT_TYPE_ID=SHOPIFY_ORD_ID
 VUE_APP_ORD_IDENT_TYPE_NO=SHOPIFY_ORD_NO
+VUE_APP_CUST_LOYALTY_OPTIONS={"LoyaltyCustomer":"Pass", "LoyaltyPlusOrder":"Pass +"}
