Removed: unwanted ticketId from changelog title (#20jwqu1).

--- a/changelogs/unreleased/-20jwqu1.yml
+++ b/changelogs/unreleased/-20jwqu1.yml
@@ -1,5 +1,5 @@
 ---
-title: 'Fixed: Login error when having spaces in the fields (#20jwqu1).'
+title: 'Fixed: Login error when having spaces in the fields.'
 ticket_id: "#20jwqu1"
 merge_request: 75
 author: Aniket Kumar Pandey
