--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mitt": "^2.1.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
+    "register-service-worker": "^1.7.1",
     "vue": "^3.2.26",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.12",
@@ -38,6 +39,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "v5.0.0-alpha.7",
+    "@vue/cli-plugin-pwa": "^4.5.16",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
