Improved: code to add PR no. on changelog file (#232z8jk).

--- a/changelogs/unreleased/-232z8jk.yml
+++ b/changelogs/unreleased/-232z8jk.yml
@@ -1,6 +1,6 @@
 ---
 title: 'Implement logic to make filters functional on product inventory list page.'
 ticket_id: "#232z8jk"
-merge_request: 
+merge_request: 76
 author: Aniket Kumar Pandey
 type: added
