Improved: changelog title of PR (#276nvc1).

--- a/changelogs/unreleased/-276nvc1.yml
+++ b/changelogs/unreleased/-276nvc1.yml
@@ -1,5 +1,5 @@
 ---
-title: 'Implemented: functionality to make display Shopify related information for a product variant on product inventory detail page.'
+title: 'Implemented: functionality to display Shopify related information for a product variant on product inventory detail page.'
 ticket_id: "#276nvc1"
 merge_request: 102
 author: Aniket Kumar Pandey
