--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "^2.4.7",
-    "@hotwax/oms-api": "https://github.com/ymaheshwari1/oms-api/tree/%232ebeamz",
+    "@hotwax/oms-api": "git://github.com/ymaheshwari1/oms-api.git##2ebeamz",
     "@ionic/vue": "^6.0.2",
     "@ionic/vue-router": "^6.0.2",
     "axios": "^0.21.1",
