--- a/firebase.json
+++ b/firebase.json
@@ -1,17 +1,33 @@
 {
-  "hosting": {
-    "target": "commerce-hub-dev",
-    "public": "dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
+  "hosting": [
       {
+      "target": "commerce-hub-dev",
+      "public": "dist",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
+    },
+    {
+      "target": "commerce-hub",
+      "public": "dist",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [ {
         "source": "**",
         "destination": "/index.html"
-      }
-    ]
-  }
+      } ]
+
+    }
+  ]
 }
