--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "^2.4.7",
+    "@hotwax/oms-api": "github:ymaheshwari1/oms-api",
     "@ionic/vue": "^6.0.2",
     "@ionic/vue-router": "^6.0.2",
     "axios": "^0.21.1",
