--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "core-js": "^3.6.5",
     "http-status-codes": "^2.1.4",
     "mitt": "^2.1.0",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.33",
+    "luxon": "^2.4.0",
     "register-service-worker": "^1.7.1",
     "vue": "^3.2.26",
     "vue-i18n": "^9.0.0",
@@ -33,6 +32,7 @@
   "devDependencies": {
     "@capacitor/cli": "^2.4.7",
     "@intlify/vue-i18n-loader": "^2.1.0",
+    "@types/luxon": "^2.3.2",
     "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
