Added support to alias specific instance URL with environment configuration(#30dkjp1)

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ VUE_APP_ORD_IDENT_TYPE_NO=SHOPIFY_ORD_NO
 VUE_APP_CUST_LOYALTY_OPTIONS={"LoyaltyCustomer":"Pass", "LoyaltyPlusOrder":"Pass +"}
 VUE_APP_BASE_URL=
 VUE_APP_PERMISSION_ID=
+VUE_APP_ALIAS={}
