--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,22 @@
 {
   "hosting": [
-      {
-      "target": "commerce-hub-dev",
+    {
+      "target": "prod",
+      "public": "dist",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
+    },    
+    {
+      "target": "dev",
       "public": "dist",
       "ignore": [
         "firebase.json",
@@ -16,18 +31,19 @@
       ]
     },
     {
-      "target": "commerce-hub",
+      "target": "uat",
       "public": "dist",
       "ignore": [
         "firebase.json",
         "**/.*",
         "**/node_modules/**"
       ],
-      "rewrites": [ {
-        "source": "**",
-        "destination": "/index.html"
-      } ]
-
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
     }
   ]
 }
