--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ionic-sdk",
-  "version": "0.1.0",
+  "name": "commerc-hub",
+  "version": "1.1.0",
   "private": true,
   "description": "An Ionic project",
   "scripts": {
